<resources>
    <string name="app_name">MarsTracker</string>
    <string name="select_rover">Please select a rover: </string>
    <string name="model1">fun1</string>
    <string name="model4">Customize</string>
    <string name="rover1">Curiosity</string>
    <string name="rover2">Opportunity</string>
    <string name="rover3">Spirit</string>
    <string name="select_camera">Select a camera: </string>
    <string name="cancel">cancel</string>
    <string name="select_date">please select date</string>
    <string name="select_start_date">select start date</string>
    <string name="select_end_date">select end date</string>
    <string name="check">Submit</string>
    <string name="result">Photos</string>
    <string name="photoId">Photo ID:</string>
    <string name="earth_date">Earth date:</string>
    <string name="sol">Sol:</string>
    <string name="camera">Camera:</string>
    <string name="from">From:</string>
    <string name="camera1">FHAZ</string>
    <string name="camera2">RHAZ</string>
    <string name="camera3">MAST</string>
    <string name="camera4">CHEMCAM</string>
    <string name="camera5">MAHLI</string>
    <string name="camera6">MARDI</string>
    <string name="camera7">NAVCAM</string>
    <string name="camera8">PANCAM</string>
    <string name="camera9">MINITES</string>
    <string name="confirm">OK</string>
    <string name="select_date_sol">Select sol or earth_date</string>
    <string name="sol_tip">Sol</string>
    <string name="date_tip">Earth date</string>
    <string name="tips_sol">Please enter an integer (0-9999)</string>
    <string name="no_date">No photos found!</string>
    <string name="about">About</string>
    <string name="copy_right">Copyrights © 2017</string>
    <string name="version">Version Bete 0.1</string>
    <string name="content">Contact with us</string>
</resources>
