<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#303F9F"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_back"
            android:src="@drawable/aao"
            android:layout_width="50dp"
            android:layout_height="50dp" />
        <TextView
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="25dp"
            android:id="@+id/tv_photo_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_margin="5dp"
        android:id="@+id/iv_details"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/sol"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_sol"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_photo_id"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/from"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_from"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_camera"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16dp"
            android:layout_weight="1"
            android:text="@string/earth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_earth_date"
            android:text="@string/photoId"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



</LinearLayout>